--- a/OnlineShop/Properties/launchSettings.json
+++ b/OnlineShop/Properties/launchSettings.json
@@ -21,6 +21,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7196;http://localhost:5068",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
